# locate-anything

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.expose-backend.yml  docker-compose.ghcr.yml  docker-compose.mock.yml  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  Dockerfile  app.py  config.py  mock_engine.py  pyproject.toml  requirements.txt  schemas.py  storage.py  tasks.py  worker.py
backend/tests/: conftest.py  test_api.py  test_tasks.py  test_worker.py
docs/superpowers/plans/: 2026-06-02-box-labels.md
docs/superpowers/specs/: 2026-06-02-box-labels-design.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: AppShell.tsx  BoxOverlay.test.tsx  BoxOverlay.tsx  HealthBadge.tsx  InfoTip.test.tsx  InfoTip.tsx  Scope.tsx  UploadDropzone.tsx
frontend/src/lib/: geometry.test.ts  geometry.ts
frontend/src/pages/: HistoryPage.tsx  SearchPage.tsx  SystemPage.tsx
scripts/: check-gpu.sh  run.sh
